# BTC_XGBOOST

./: .gitignore  README.md  audit_trades.py  dataset_sample.csv  eel_app.py  forward_test.py  live_runner.py  main.py  ohlcv.db-shm  ohlcv.db-wal  pyproject.toml
Model-XGBoost/: INDICATOR_GUIDE.md  dataset.py
Model_XGBoost/: dataset.py  features.py  predict.py  train.py
Model_XGBoost/indicators/: bar_as_atr.py  rsi.py  supertrend_cci.py
Ref/: Binance.txt  Hyperliquid.txt
src/: aggregator.py  auditor.py  dashboard_service.py  database.py  hyperliquid_ingestor.py  ingestion.py  polymarket.py  tracker.py
web/: app.js  index.html  styles.css
